deploy/minio/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-api
  namespace: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: api
  wildcardPolicy: None
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-ui
  namespace: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: ui
  wildcardPolicy: None
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
